--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -21,7 +21,8 @@ body {
 
 .topo nav ul {
     margin: 20px 50px 0 0;
-    text-align: right;
+    position: fixed;
+    right: 10px;
 }
 
 .topo nav li {
