--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -1,7 +1,19 @@
+html {
+    font-size: 62.5%
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #ccc;
     margin: 0;
+}
+
+body p, nav {
+    font-size: 1.6em;
+}
+
+body h2 {
+    font-size: 2em;
 }
 
 .topo {
@@ -44,7 +56,7 @@ body {
 }
 
 .topo h1 {
-    font-size: 56px;
+    font-size: 5.6em;
     text-shadow: 2px 2px 5px black;
     margin-bottom: 0;
 }
@@ -52,7 +64,7 @@ body {
 .topo p {
     background-color: rgba(0, 0, 0, .7);
     display: inline-block;
-    font-size: 18px;
+    font-size: 1.8em;
     padding: 16px;
     border-bottom: 2px solid;
     border-radius: 6px;
